# deadpoint

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
deadpoint/: __init__.py  cli.py  demo.py  ingest.py  model.py  pcap.py  report.py  tui.py  web.py
deadpoint/detect/: __init__.py  fingerprint.py  seed_heuristics.py  stats.py
deadpoint/exploit/: __init__.py  call_models.py  lcg.py  mt19937.py  php.py  seed_recovery.py  untemper.py  xorshift.py  zsolve.py
deadpoint/remediate/: __init__.py  codegen.py  mappings.py  secure_helpers.py
docs/: case-study-ot-pairing-code.md  case-study-session-token-prediction.md  demo.tape  usage.md
native/: Cargo.toml  README.md  pyproject.toml
native/src/: lib.rs
tests/: test_cli.py  test_demo.py  test_detect.py  test_ingest.py  test_java_double.py  test_lcg.py  test_mt19937.py  test_native_parity.py  test_partial_z3.py  test_pcap.py  test_php.py  test_remediate.py  test_seed_recovery.py  test_tui.py  test_untemper.py  test_web.py  test_xorshift.py
